# npc-race

./: .gitignore  CLAUDE.md  Dockerfile  GETTING_STARTED.md  ROADMAP.md  car_template.py  car_template_v2.py  engine.py  npc-race-sellable.md  play.py  pyproject.toml  viewer.html
.claude/: settings.json
.paircoder/: capabilities.yaml  config.yaml
_test_init_onboarding/: car.py
cars/: _rival_factory.py  berserker.py  brickhouse.py  chameleon.py  crosswind.py  driftking.py  foxfire.py  gambler.py  glasscanon.py  gooseloose.py  ironside.py  nightfury.py  paperweight.py  phantom.py  rustbucket.py  silky.py  slipstream.py  steamroller.py  tortoise.py  vortex.py
cli/: __init__.py  commands.py  ghost_command.py  main.py  progression.py  race_commands.py  trial_command.py
data/: npcrace.db
docs/: current-vs-proposed.md  deployment.md  design-pit-wall-dashboard.md  npc-race-spec.md  phase4-proposal.md  progress-report.md  proposal-code-circuit-browser-flow.md  proposal-full-race-distance.md  proposal-npc-race-v3.md  proposal-training-wheels.md  research-realism-calibration.md  roadmap-sprints-9-16.md  sensitivity-baseline.md  sensitivity-phase1-physics.md  sensitivity-phase1.md  sensitivity-sprint26.md  sensitivity-sprint27.md  sensitivity-sprint28.md  spec-adaptive-intelligence.md  sprint-26-analysis.md  sprint-28-research.md  sprint33-proposal.md
engine/: __init__.py  brake_model.py  car_attributes.py  car_development.py  car_loader.py  car_project_loader.py  championship.py  chassis_physics.py  coaching.py  code_quality.py  collision.py  commentary.py  damage.py  dirty_air.py  drama.py  driver_model.py  drs_system.py  efficiency_engine.py  efficiency_helpers.py  ers_model.py  fast_export.py  fuel_model.py  ghost.py  ghost_race.py  glitch.py  hybrid_physics.py  incident.py  lap_accumulator.py  leaderboard.py  league_gates.py  league_system.py  live_server.py  narrative.py  parts_api.py  (+32 more)
(+614 files in other folders)
