[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "npc-race"
version = "0.1.0"
requires-python = ">=3.11"
description = "NPC Race — you build the car, we run the race"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "engine*", "security*", "tracks*", "viewer*"]

[project.scripts]
npcrace = "cli.main:main"
