[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "npc-race"
version = "0.1.0"
requires-python = ">=3.11"
description = "NPC Race — you build the car, we run the race"
dependencies = ["websockets>=12.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
]
server = ["fastapi>=0.110", "uvicorn>=0.29", "slowapi>=0.1.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "engine*", "security*", "server*", "tracks*", "viewer*"]

[tool.pytest.ini_options]
markers = [
    "slow: legacy alias for integration (deprecated)",
    "smoke: short simulation tests (1-2 laps, few cars)",
    "integration: full simulation tests (multi-lap, 20 cars, pipelines)",
]

[project.scripts]
npcrace = "cli.main:main"
